retrieveUnpackaged/objects/Forms__c.object
<CustomObject>
    <fields>
        <fullName>Data_Deficiencies__c</fullName>
        <description>PRIAv5</description>
        <label>Data Deficiencies:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Chemistry</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Acute Tox</fullName>
                </value>
                <value>
                    <fullName>Ecological</fullName>
                </value>
                <value>
                    <fullName>Efficacy</fullName>
                </value>
                <value>
                    <fullName>Labeling</fullName>
                </value>
                <value>
                    <fullName>Residue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_1_A_L_Hours__c</fullName>
        <description>EPA-100</description>
        <label>Date 1 A/L Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_1_End_Date_Time__c</fullName>
        <description>EPA-100</description>
        <label>Date 1 End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_1_S_L_Hours__c</fullName>
        <description>EPA-100</description>
        <label>Date 1 S/L Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_1_Start_Date_Time__c</fullName>
        <description>EPA-100</description>
        <label>Date 1 Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_1_Total_Work_Hours__c</fullName>
        <description>EPA-100</description>
        <label>Date 1 Total Work Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_2_A_L_Hours__c</fullName>
        <description>EPA-100</description>
        <label>Date 2 A/L Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_2_End_Date_Time__c</fullName>
        <description>EPA-100</description>
        <label>Date 2 End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_2_S_L_Hours__c</fullName>
        <description>EPA-100</description>
        <label>Date 2 S/L Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_2_Start_Date_Time__c</fullName>
        <description>EPA-100</description>
        <label>Date 2 Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_2_Total_Work_Hours__c</fullName>
        <description>EPA-100</description>
        <label>Date 2 Total Work Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_75_Day_Letter_sent__c</fullName>
        <description>PRIAv5</description>
        <label>Date &quot;75 Day&quot; Letter sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Admin_Officer__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Badging_Offie__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Budget_Office__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cincinnati_Finance_Center__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Custodial_Property__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Facilities_Management__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Financial_Management__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Human_Resources_Office__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ITO_IMO__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Librarian__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_National_Security_Info__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Other__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Personnel__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Records_Liaison_Officer__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Safety_Health_Env_Mgmt__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Security_Management_Division__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Super_SEE_Contracting__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Transit_Parking_Subsidy_Parking__c</fullName>
        <description>EPA-3110-1</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>EPA-1900-8a_old</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <description>PRIAv5</description>
        <label>Decision # (each on its own line)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <description>EPA-PCOR</description>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Phone_Number__c</fullName>
        <description>EPA-PCOR</description>
        <label>Delivery Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Deputy_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-PCOR</description>
        <label>Deputy Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Describe_Interactions_with_Company__c</fullName>
        <description>PRIAv5</description>
        <label>Describe Interactions with Company</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>BAP Provisioning</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Interface__c</fullName>
        <description>Application Approval</description>
        <label>Description of Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developed_in_accordance_with_1__c</fullName>
        <description>ORD-111</description>
        <label>Developed in accordance with:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Select_Documentation_Type_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R-2</fullName>
                </value>
                <value>
                    <fullName>R-2 and R-5</fullName>
                </value>
                <value>
                    <fullName>Other (provide details in &quot;Other Details&quot;)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developed_in_accordance_with_2__c</fullName>
        <description>ORD-111</description>
        <label>Developed in accordance with:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>X2_QA_Project_Plan__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R-5</fullName>
                </value>
                <value>
                    <fullName>Other (provide details in &quot;Other Details&quot;)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developed_in_accordance_with_3__c</fullName>
        <description>ORD-111</description>
        <label>Developed in accordance with:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Select_Documentation_Type_3__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R-2</fullName>
                </value>
                <value>
                    <fullName>R-2 and R-5</fullName>
                </value>
                <value>
                    <fullName>Other (provide details in &quot;&quot;Other Details&quot;&quot;)&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Appropriation_Fund__c</fullName>
        <description>SF-182</description>
        <label>Direct Appropriation / Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Cost_Total__c</fullName>
        <description>SF-182</description>
        <formula>Books_Materials__c +  Tuition_and_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_and_Appropriation__c</fullName>
        <defaultValue>&quot;Fund Chargeable&quot;</defaultValue>
        <description>SF-182</description>
        <label>Direct Costs and Appropriation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-PCOR</description>
        <label>Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposition_of_EPA_Form_3110_1__c</fullName>
        <defaultValue>&quot;EPA Form 3110-1, Personnel Separation or Transfer Checklist, becomes part of the EPA employee&apos;s Electronic Official Personnel File(eOPF) and retention requirements are governed by the EPA Record Control Schedule. For contractors and grantees, the completed EPA Form 3110-1 will remain in the possession of their COR/SEE Monitor/Coordinator or designee for record keeping purposes, filed with the appropriate program file and retained in accordance with the appropriate Agency records schedule.&quot;</defaultValue>
        <description>EPA-3110-1</description>
        <label>Disposition of EPA Form 3110-1.</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division_Director_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-PCOR</description>
        <label>Division Director 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Director_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-PCOR</description>
        <label>Division Director 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doc_Purchase_Order_Requisition__c</fullName>
        <description>SF-182</description>
        <label>Doc / Purchase Order / Requisition #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Requirements__c</fullName>
        <defaultValue>&quot;Are the QA documentation requirements specified on this form incorporated into the extramural documentation (RFA, RFP, SOW, PWS, etc.)?&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Documentation Requirements</label>
        <length>137</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EHRI_Employee_Number2__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK( 
IF( ISBLANK( Prepare_Form_for__c ), 
 Type_1_Owner_Contact__r.Employee_Number__c , 
 Prepare_Form_for__r.Employee_Number__c 
)), 
&quot;[This field will populate after save.]&quot;, 
IF( ISBLANK( Prepare_Form_for__c ), 
 Type_1_Owner_Contact__r.Employee_Number__c , 
 Prepare_Form_for__r.Employee_Number__c 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EHRI Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_Form_3110_1__c</fullName>
        <defaultValue>&quot;EPA personnel are required to account for all Government property in you possession or custody, outstanding cash or leave advances, financial indebtedness to the Agency and unexpired terms and conditions of outstanding employment and/or training agreements. You are responsible for arranging, through appropriate administrative channels, settlement of outstanding debts and obligations, and clearance for proprietary or sensitive information. Failure to complete this clearance process may result in the delay of final salary payments.&quot; + BR()+BR() + &quot;CORs and SEE Monitor/Coordinators are required to account for all Government property on behalf of the contractor, SEE, grantee, etc. in their possession or custody including Agency records, hard copy and electronic and Library materials. By signing Part F, you acknowledge that you have completed your responsibilities to the best of you knowledge and that knowingly providing false or misleading statements in the completion of this form may be punishable by fine or imprisonment or both under applicable laws.&quot;</defaultValue>
        <description>EPA3110-1</description>
        <label>EPA Form 3110-1</label>
        <length>1050</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPA_Users_AAShips__c</fullName>
        <description>Application Approval</description>
        <label>EPA Users – AAShips</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_Users_Regions__c</fullName>
        <description>Application Approval</description>
        <label>EPA Users – Regions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Hours_Donated__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Hours Donated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Use_or_Lose__c</fullName>
        <defaultValue>&quot;I hereby wish to contribute hours of annual leave that would otherwise be forfeited at the end of the current leave year to the EPA Leave Bank (enter # of hours below).  By signing the below, I certify that I want EPA to deposit, at the conclusion of the current leave year, all the leave that would otherwise forfeit, directly into the Agency Leave Bank.  This leave may not be restored, to facilitate and encourage extra donations, the normal limitation for contributing use or lose hours is waived during the open season.  This waiver is in accordance with the Leave Bank regulations under 5 CFR, Section 630.1005.&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <length>620</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>E. Use or Lose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Digital_Signature__c</fullName>
        <description>ORD-111</description>
        <inlineHelpText>Clicking the &quot;Employee&apos;s Signature&quot; checkbox will sign this section upon saving the form.</inlineHelpText>
        <label>Employee Digital Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID_No__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Type_1_Owner_Contact__r.Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Location__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Employee Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>RTP</fullName>
                </value>
                <value>
                    <fullName>National Program Manager/Headquarters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Name_SF_182__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Applicant_Name_Last_First_MI2__c),
&quot;[Will be populated by Applicant Name field.]&quot;,
Applicant_Name_Last_First_MI2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_s_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All</description>
        <inlineHelpText>Clicking this box digitally dates and signs this form.</inlineHelpText>
        <label>Employee&apos;s Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ending_Date_of_Development_Activity__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Training_End_Date__c), 
&quot;[Will be populated by Training End Date field.]&quot;, 
TEXT(Training_End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ending Date of Development Activity:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_to_Chief_Learning_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-182 was &quot;Requires_Escalated_Approval&quot;</description>
        <label>Escalate to Chief Learning Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Award__c</fullName>
        <description>ORD-111</description>
        <label>Estimated Award $</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <description>ORD-111</description>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <description>ORD-111</description>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Factor__c</fullName>
        <defaultValue>&quot;For new actions, has the QA documentation required in Section IV of this form been included in the RFA, RFP, SOW or PWS as an evaluation factor?&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Evaluation Factor</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ORD-111</description>
        <label>Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exit_Survey_Link__c</fullName>
        <defaultValue>&quot;https://www.surveymonkey.com/r/epaexitsurvey&quot;</defaultValue>
        <description>EPA-3110-1</description>
        <label>Exit Survey Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Submission_Date__c</fullName>
        <description>ORD-111</description>
        <label>Expected Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_User_Organizations__c</fullName>
        <label>Expected User Organizations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>OAR</fullName>
                </value>
                <value>
                    <fullName>OARM</fullName>
                </value>
                <value>
                    <fullName>OCFO</fullName>
                </value>
                <value>
                    <fullName>OCSPP</fullName>
                </value>
                <value>
                    <fullName>OECA</fullName>
                </value>
                <value>
                    <fullName>OEI</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>OITA</fullName>
                </value>
                <value>
                    <fullName>OLEM</fullName>
                </value>
                <value>
                    <fullName>ORD</fullName>
                </value>
                <value>
                    <fullName>OW</fullName>
                </value>
                <value>
                    <fullName>R01</fullName>
                </value>
                <value>
                    <fullName>R02</fullName>
                </value>
                <value>
                    <fullName>R03</fullName>
                </value>
                <value>
                    <fullName>R04</fullName>
                </value>
                <value>
                    <fullName>R05</fullName>
                </value>
                <value>
                    <fullName>R06</fullName>
                </value>
                <value>
                    <fullName>R07</fullName>
                </value>
                <value>
                    <fullName>R08</fullName>
                </value>
                <value>
                    <fullName>R09</fullName>
                </value>
                <value>
                    <fullName>R10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <description>BAP Provisioning</description>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCO_Appointment_Instructions__c</fullName>
        <defaultValue>&quot;In accordance with Chapter 2520 of the Resources Management Directives System (RMDS); the EPA Funds Control Manual — Administrative Control of Appropriated and Other Funds, the following individual(s) listed in the table below are designated as Funds Control Officer (FCO) and/or Alternate Funds Control Officer for this office.&quot;+BR()+BR()+&quot;The FCO’s financial management authority to commit properly executed funding documents is restricted to resources allocated to the Allowance Holder(s)/Responsibility Center(s) indicated below. Under no circumstances may the FCO sign commitment documents outside the authority, scope or control of the AH/RC(s) listed.&quot;+BR()+BR()+&quot;As stated in RMDS 2520, by signing in the funds certification block on funding documents, the FCO acknowledges and accepts the responsibility that his or her signature on a document certifies that the document has passed his/her personal review and that the funds cited are available as to the appropriate purpose, time and amount. The FCO is also responsible for notifying obligating officials if committed funds are subsequently decommitted in Compass. The FCO will be responsible for maintaining a document control tracking system that will reconcile funding documents against the EPA financial system (Compass), and will assist the Allowance Holder in maintaining proper funds control.&quot;</defaultValue>
        <description>FCO Appointment Instructions</description>
        <label>FCO Appointment Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCO_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FCO Appointment</description>
        <label>FCO Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (FCO Name)</relationshipLabel>
        <relationshipName>Formspt375</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-PCOR</description>
        <label>FCO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_Description__c</fullName>
        <defaultValue>&quot;I hereby withdraw from EPA’s Leave Bank. I understand that I may not re-enroll until the next open enrollment period or by another qualifying event.&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>F__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA-3160-6v5</description>
        <label>F. Withdraw</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilities_Management_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Facilities Management (Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_and_EPA_Business_Reference_Model__c</fullName>
        <description>Application Approval</description>
        <label>Federal and EPA Business Reference Model</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <description>PRIAv5</description>
        <label>Fee Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalize_Approval_Reassignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ORD-111</description>
        <label>Finalize Approval Reassignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Management_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Financial Management(Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_3160__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Type_1_Owner_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Owner__c</fullName>
        <description>PRIAv5</description>
        <formula>IF( Unauthenticated_Owner__c != NULL, Unauthenticated_Owner__r.FirstName + &quot; &quot; + Unauthenticated_Owner__r.LastName, Owner:User.FirstName + &quot; &quot; + Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Record_Name__c</fullName>
        <formula>Name</formula>
        <label>Form Record Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Status__c</fullName>
        <description>All</description>
        <label>Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Type_Name__c</fullName>
        <description>All</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <description>All</description>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer Sandbox</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Developer Pro Sandbox</fullName>
                </value>
                <value>
                    <fullName>Full Sandbox</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Data Storage MB</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>File Storage MB</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Full User Count</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Limited User Count</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>